[tool.poetry]
name = "plyball"
version = "0.1.0"
description = ""
authors = ["W. Aaron Morris <waaronmorris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alabaster = "0.7.13"
babel = "2.12.1"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
bs4 = "0.0.1"
certifi = "2022.12.7"
chardet = "5.1.0"
docutils = "0.19"
idna = "3.4"
imagesize = "1.4.1"
jinja2 = "3.1.2"
lxml = "4.9.2"
keyring = "23.13.1"
markupsafe = "2.1.2"
numpy = "1.24.2"
packaging = "23.1"
pandas = "2.0.0"
pkginfo = "1.9.6"
pygments = "2.15.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
readme-renderer = "37.3"
requests = "2.31.0"
requests-toolbelt = "0.10.1"
six = "1.16.0"
snowballstemmer = "2.2.0"
soupsieve = "2.4.1"
sphinx = ">=6.1.3"
sphinxcontrib-applehelp = ">=1.0.4"
sphinxcontrib-devhelp = ">=1.0.2"
sphinxcontrib-htmlhelp = ">=2.0.1"
sphinxcontrib-jsmath = ">=1.0.1"
sphinxcontrib-qthelp = ">=1.0.2"
sphinxcontrib-serializinghtml = ">=1.1.3"
structlog = "23.2.0"
tqdm = "4.42.1"
twine = "3.1.1"
urllib3 = "1.26.5"
webencodings = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
