[tool.poetry]
name = "plyball"
version = "2.6.11"
description = ""
authors = ["W. Aaron Morris <waaronmorris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alabaster = ">=0.7.13"
babel = ">=2.12.1"
beautifulsoup4 = ">=4.12.2"
bleach = ">=6.0.0"
bs4 = ">=0.0.1"
certifi = ">=2022.12.7"
chardet = ">=5.1.0"
docutils = ">=0.19"
idna = ">=3.4"
imagesize = ">=1.4.1"
jinja2 = ">=3.1.2"
lxml = ">=4.9.2"
markupsafe = ">=2.1.2"
numpy = ">=1.24.2"
pandas = ">=2.0.0"
pkginfo = ">=1.9.6"
pygments = ">=2.15.0"
pyparsing = ">=3.0.9"
python-dateutil = ">=2.8.2"
readme-renderer = ">=37.3"
requests = ">=2.31.0"
requests-toolbelt = ">=0.10.1"
six = ">=1.16.0"
snowballstemmer = ">=2.2.0"
soupsieve = ">=2.4.1"
structlog = ">=24.1.0"
tqdm = ">=4.42.1"
urllib3 = ">=1.26.5"
webencodings = ">=0.5.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.26.0"
python-semantic-release = "^9.7.3"
packaging = "23.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.4.0"
flake8 = "^7.0.0"
black = "^22.1.0"
isort = "^5.10.1"
twine = "3.1.1"
sphinx = ">=6.1.3"
sphinxcontrib-applehelp = ">=1.0.4"
sphinxcontrib-devhelp = ">=1.0.2"
sphinxcontrib-htmlhelp = ">=2.0.1"
sphinxcontrib-jsmath = ">=1.0.1"
sphinxcontrib-qthelp = ">=1.0.2"
sphinxcontrib-serializinghtml = ">=1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
version_variable = [
    "plyball/__init__.py:__version__",
]
assets = []
build_command_env = []
commit_message = "chore(release): release  {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "{version}"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"


[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test", "major", "minor", "patch"]
major_tags = ["major"]
minor_tags = ["feat", "minor"]
patch_tags = ["fix", "perf", "patch"]
default_bump_level = 1

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

